# myfitapp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: release.yml
app/: main.py
app/api/: endpoints.py
app/api/db/: volume.py
app/api/models/: workout.py
app/db/: workout_db.py
app/public/: index.html  main.html  manifest.json
app/public/assets/CSS/: got_top.css  toast.css
app/public/assets/JS/: changeWorkout.js  deleteWorkout.js  fillPage.js  go_top.js  login.js  modifySerie.js  sendWorkout.js  timer.js  updateScheda.js
docker/: Dockerfile
src/myfitapp/: __init__.py  main.py
src/myfitapp/api/: endpoints.py  models.py
src/myfitapp/api/db/: volume.py
src/myfitapp/front/myfitapp-ui/: .gitignore  package-lock.json  package.json  tailwind.config.js
src/myfitapp/front/myfitapp-ui/src/: app.html
src/myfitapp/front/myfitapp-ui/src/lib/: AddWorkoutModal.svelte  DeleteWorkoutButton.svelte  ModifySerieModal.svelte  Navbar.svelte  Timer.svelte  WorkoutList.svelte  WorkoutSelector.svelte
src/myfitapp/front/myfitapp-ui/src/routes/: +page.svelte
src/myfitapp/front/myfitapp-ui/src/routes/api/workout/: +server.ts
src/myfitapp/front/myfitapp-ui/src/routes/api/workout/[workoutId]/: +server.ts
src/myfitapp/front/myfitapp-ui/static/: manifest.json
src/myfitapp/public/: index.html
src/myfitapp/public/assets/CSS/: toast.css
src/myfitapp/public/assets/JS/: modifySerie.js
storage/ferretdb/: Dockerfile  fly.toml
storage/postgres/: fly.toml
