[project]
    name = "myfitapp"
    version = "v3.0.0"
    description = "a cloud native application for tracking gym workouts, built in FastAPI."
    authors = [
        { name = "fioreale", email = "alefio96@gmail.com" },
    ]
    dependencies = [
        "fastapi[all]==0.115.0",
        "pymongo==4.9.1",
        "ruff==0.6.8",
    ]
    readme = "README.md"
    requires-python = ">= 3.12"

[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]

    line-length = 88
    indent-width = 4

[tool.ruff.lint]
    select = [
        "E4",
        "E7",
        "E9",
        "F",
    ]
    ignore = [
    ]

    fixable = [
        "ALL",
    ]
    unfixable = [
    ]

    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
    quote-style = "double"
    indent-style = "space"
    skip-magic-trailing-comma = false
    line-ending = "auto"
    docstring-code-format = false
    docstring-code-line-length = "dynamic"

[build-system]
    requires = [
        "hatchling",
    ]
    build-backend = "hatchling.build"

[tool.rye]
    managed = true
    virtual = true
    dev-dependencies = [
    ]

[tool.hatch.metadata]
    allow-direct-references = true

[tool.hatch.build.targets.wheel]
    packages = [
        "src/myfitapp",
    ]
